<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2024 REGnosys
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.regnosys.rosetta</groupId>
		<artifactId>com.regnosys.rosetta.parent</artifactId>
		<version>0.0.0.main-SNAPSHOT</version>
	</parent>

	<name>Rosetta DSL Scripts</name>
	<artifactId>com.regnosys.rosetta.tools</artifactId>

	<description>
		Responsibilities: utility scripts.
	</description>

	<properties>
		<maven.compiler.release>17</maven.compiler.release>

		<xsdParser.version>1.2.14</xsdParser.version>
		<commons-cli.version>1.6.0</commons-cli.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.github.xmlet</groupId>
				<artifactId>xsdParser</artifactId>
				<version>${xsdParser.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>${commons-cli.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Inter-project dependencies -->
		<dependency>
			<groupId>com.regnosys.rosetta</groupId>
			<artifactId>com.regnosys.rosetta</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.regnosys.rosetta</groupId>
			<artifactId>com.regnosys.rosetta.ide</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.regnosys.rosetta</groupId>
			<artifactId>com.regnosys.rosetta.tests</artifactId>
			<version>${project.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- External dependencies -->
		<dependency>
			<groupId>com.github.xmlet</groupId>
			<artifactId>xsdParser</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext.testing</artifactId>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext.xbase.testing</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jdk8</artifactId>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>